# robots

configs/spotmicro_config/: CMakeLists.txt  package.xml
configs/spotmicro_config/config/imu/: RTIMULib.ini  madgwick_filter.yaml  mpu9250.yaml
configs/spotmicro_config/config/ros_control/: gazebo.yaml  ros_control.yaml
configs/spotmicro_config/include/spotmicro_config/: hardware.h  hardware_interface.h
configs/spotmicro_config/launch/: bringup.launch  calibration.launch  gazebo.launch  position_controllers.launch
configs/spotmicro_config/launch/include/: imu.launch  position_controllers.launch  realsense_d435.launch
configs/spotmicro_config/src/: hardware_interface.cpp  hardware_interface_node.cpp
